--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
         "illuminate/support": "^7.0|^8.0"
     },
     "require-dev": {
+        "illuminate/database": "^8.28",
+        "orchestra/testbench": "^6.12",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
