--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require-dev": {
         "orchestra/testbench": "^6.12",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^9.5",
+        "spatie/macroable": "^1.0"
     },
     "autoload": {
         "psr-4": {
