--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "type": "laravel-package",
     "require": {
         "php": "^8.0",
-        "illuminate/support": "^8.0|^9.0"
+        "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
         "orchestra/testbench": "^v7.9.0",
