--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     ],
     "type": "laravel-package",
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "illuminate/support": "^8.0|^9.0|^10.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^v7.9.0",
-        "phpunit/phpunit": "^9.5",
+        "orchestra/testbench": "v8.5.5",
+        "phpunit/phpunit": "^10.2.0",
         "spatie/macroable": "^2.0.0"
     },
     "autoload": {
