--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     ],
     "type": "laravel-package",
     "require": {
-        "php": "^8.1",
-        "illuminate/support": "^8.0|^9.0|^10.0"
+        "php": "^8.2",
+        "illuminate/support": "^10.0|^11.0"
     },
     "require-dev": {
-        "orchestra/testbench": "v8.12.1",
-        "phpunit/phpunit": "^10.3.5",
+        "orchestra/testbench": "^v9.0.1",
+        "phpunit/phpunit": "^11.0.8",
         "spatie/macroable": "^2.0.0"
     },
     "autoload": {
