--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,3 +31,6 @@ jobs:
 
     - name: Run test suite
       run: vendor/bin/phpunit ./tests --coverage-text
+
+    - name: Run PHPStan
+      run: vendor/bin/phpstan
