--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "type": "laravel-package",
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^10.0|^11.0"
+        "illuminate/support": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "larastan/larastan": "^2.9",
